flacparse: Properly propagate downstream flow returns upstream

https://bugzilla.gnome.org/show_bug.cgi?id=707229